<resources>
    <string name="app_name">My Investing</string>

    <!-- main_activity -->
    <string name="deal_btn">Deal info</string>
    <string name="input_btn">Input info</string>
    <string name="repeat_last_operation">Please, repeat last operation!</string>

    <!-- navigation drawer menu items -->
    <string name="nav_deal_item">Deals</string>
    <string name="nav_input_item">Inputs</string>
    <string name="nav_title_submenu">Portfolios</string>
    <string name="nev_add_new_subitem">Add new</string>

    <string name="drawer_open"> Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- AddDealActivity.java -->
    <!-- AddInputActivity.java -->
    <string name="db_got_item">Got it!</string>
    <string name="db_have_not_got_item">Sorry, error happened!</string>
    <string name="open_button">Open</string>
    <string name="add_deal">Add Deal</string>
    <string name="add_input">Add Input</string>


    <!-- Hints -->
    <!-- activity_add_deal.xml -->
    <!-- activity_add_input.xml -->
    <string name="hint_eTTicker">SBER</string>
    <string name="hint_tVTicker">Ticker:</string>
    <string name="hint_tVType">Type:</string>
    <string name="hint_tVPortfolio">Portfolio:</string>
    <string name="hint_eTPortfolio">123ABC</string>

    <!-- от порядка следования зависит работа PortfolioLoader.java -->
    <string-array name="spinType_deal_array">
        <item>Sell</item>
        <item>Buy</item>
        <item>Div</item>
    </string-array>

    <!-- от порядка следования зависит работа PortfolioLoader.java -->
    <string-array name="spinType_input_array">
        <item>Input</item>
        <item>Output</item>
        <item>NDFL</item>
    </string-array>

    <string name="hint_eTYear">yy</string>
    <string name="hint_eTMonth">mm</string>
    <string name="hint_eTDay">dd</string>
    <string name="hint_tVDate">Date:</string>
    <string name="hint_slash">/</string>
    <string name="hint_tVPrice">Price:</string>
    <string name="hint_eTPrice">0.00000</string>
    <string name="hint_tVVolume">Volume:</string>
    <string name="hint_tVFee">Fee:</string>
    <string name="hint_btnReady">Ready</string>
    <string name="hint_tVAmount">Amount</string>
    <string name="hint_tVNote">Note</string>


    <!-- activity_info_deal.xml -->
    <string name="hint_btnAdd">Add new deals</string>

    <!-- InfoFragment.java -->
    <string name="add">Add</string>
    <string name="info_fragment_deals">Deals</string>
    <string name="info_fragment_inputs">Inputs</string>


    <!-- enter_name_of_portfolio_dialog_fragment.xml -->
    <!-- confirm_deletion in InfoAdapters -->
    <string name="title_deletion">Deletion</string>
    <string name="et_df_hint">Enter name of portfolio</string>
    <string name="tv_confirm_hint">Are you sure?</string>
    <string name="btn_df_ok">OK</string>
    <string name="btn_df_cancel">CANCEL</string>


    <!-- enter_ticker_of_security_dialog_fragment.xml -->
    <string name="unknown_security">Name:&#160;</string>
    <string name="et_df_sec_hint">Enter ticker</string>


    <!-- Toast сообщения -->
    <string name="toast_no_portfolio">There is no portfolio name!</string>
    <string name="unknown_command">Unknown command!</string>

    <!-- fragment_portfolio.xml -->
    <string name="txt_ticker">Ticker</string>
    <string name="txt_name">Name</string>
    <string name="txt_volume">Vol</string>
    <string name="txt_price">Price</string>
    <string name="txt_cost">Cost</string>
    <string name="txt_profit">Profit</string>
    <string name="txt_total">Total:</string>


    <!-- PortfolioFrarment.java -->
    <string name="delete">Delete</string>


    <string name="percent">%</string>


    <!-- InfoInputAdapter.java -->
    <string name="checked_act_mode">Checked&#160;</string>
    <string name="items_act_mode">&#160;items</string>


    <!-- fragment_ticker.xml -->
    <string name="tv_fragment_ticker_price">Price</string>
    <string name="tv_fragment_ticker_volume">Volume</string>
    <string name="tv_fragment_ticker_date">Date</string>
    <string name="tv_fragment_ticker_profit">Profit/Period</string>
    <string name="tv_fragment_ticker_name">Loading &#8230; </string>
    <string name="txt_total_profit">Total profit:</string>


    <!-- Explorer.java -->
    <string name="permission_denied">Permission Denied</string>


    <!-- HtmlParser.java -->
    <string name="htmlParsingIsOK">Html parsing operation OK!</string>
    <string name="htmlParsingIsWrong">Html parsing operation Failed!</string>
    <string name="htmlParsingTableNotExists">Table does not exist!</string>

</resources>
